Media_query_changes

--- a/blogs.html
+++ b/blogs.html
@@ -165,7 +165,7 @@
 
     <!-- Blogs Starts -->
 
-    <div class="blogs-container-tp blog-carousel wow fadeIn" data-wow-delay="0.1s">
+    <div class="blogs-container-tp blog-carousel wow fadeIn" data-wow-delay="0.1s" id="blogs-container">
         <div class="container-blogs">
             <div class="search-bar">
                 <input type="text" id="search-input" placeholder="Search blogs...">
