--- a/index.html
+++ b/index.html
@@ -347,29 +347,21 @@
         <div class="container">
             <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="col-lg-4">
-                    <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-5">
-                        <button class="nav-link w-100 d-flex align-items-center text-start border p-3 mb-3 active"
+                    <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-4">
+                        <button class="nav-link w-100 d-flex align-items-center text-start border p-2 mb-4 active"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
-                            <h5 class="m-0"><i class="fa fa-bars text-primary me-4"></i>Finance Business Partnering</h5>
+                            <h5 class="m-0"><i class="fa fa-bars text-primary me-4"></i>Business Advisory</h5>
                         </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start border p-3 mb-3"
+                        <button class="nav-link w-100 d-flex align-items-center text-start border p-2 mb-4"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-2" type="button">
-                            <h5 class="m-0"><i class="fa fa-bars text-primary me-3"></i>Technology Solutions</h5>
+                            <h5 class="m-0"><i class="fa fa-bars text-primary me-3"></i>Economic Laws</h5>
                         </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start border p-3 mb-3"
+                        <button class="nav-link w-100 d-flex align-items-center text-start border p-2 mb-4"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-3" type="button">
-                            <h5 class="m-0"><i class="fa fa-bars text-primary me-3"></i>Business Process Optimization</h5>
+                            <h5 class="m-0"><i class="fa fa-bars text-primary me-3"></i>Virtual CFO</h5>
                         </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start border p-3 mb-3"
+                        <button class="nav-link w-100 d-flex align-items-center text-start border p-2 mb-0"
                             data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
-                            <h5 class="m-0"><i class="fa fa-bars text-primary me-3"></i>Advisory Services</h5>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start border p-3 mb-3"
-                            data-bs-toggle="pill" data-bs-target="#tab-pane-5" type="button">
-                            <h5 class="m-0"><i class="fa fa-bars text-primary me-3"></i>Business Support</h5>
-                        </button>
-                        <button class="nav-link w-100 d-flex align-items-center text-start border p-3 mb-0"
-                            data-bs-toggle="pill" data-bs-target="#tab-pane-6" type="button">
                             <h5 class="m-0"><i class="fa fa-bars text-primary me-3"></i>Trainings & Seminars</h5>
                         </button>
                     </div>
@@ -440,47 +432,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute rounded w-100 h-100" src="img/service-4.jpg"
-                                            style="object-fit: cover;" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="mb-4">25 Years Of Experience In Financial Support</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit
-                                        clita duo justo erat amet.</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Secured Loans</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Credit Facilities</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Cash Advanced</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-5">
-                            <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute rounded w-100 h-100" src="img/service-3.jpg"
-                                            style="object-fit: cover;" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3 class="mb-4">25 Years Of Experience In Financial Support</h3>
-                                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu
-                                        diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit
-                                        clita duo justo erat amet.</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Secured Loans</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Credit Facilities</p>
-                                    <p><i class="fa fa-check text-primary me-3"></i>Cash Advanced</p>
-                                    <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tab-pane fade" id="tab-pane-6">
-                            <div class="row g-4">
-                                <div class="col-md-6" style="min-height: 350px;">
-                                    <div class="position-relative h-100">
-                                        <img class="position-absolute rounded w-100 h-100" src="img/service-2.jpg"
+                                        <img class="position-absolute rounded w-100 h-100" src="img/training.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -763,14 +715,14 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer mt-4 py-2 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-phone me-3"></i>+012 345 67890</p>
+                    <p class="mb-4"><i class="fa fa-envelope me-3"></i>support@finoxalabs.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i
                             class="fab fa-whatsapp"></i></a>
@@ -782,26 +734,23 @@
                                 class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-5">
+                <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Finance Business Partnering</a>
-                    <a class="btn btn-link" href="">Technology Solutions</a>
-                    <a class="btn btn-link" href="">Business Process Optimization</a>
-                    <a class="btn btn-link" href="">Advisory Services</a>
-                    <a class="btn btn-link" href="">Business Support</a>
+                    <a class="btn btn-link" href="">Business Advisory</a>
+                    <a class="btn btn-link" href="">Economic Laws</a>
+                    <a class="btn btn-link" href="">Virtual CFO</a>
                     <a class="btn btn-link" href="">Trainings & Seminars</a>
                 </div>
-                <div class="col-lg-2 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
+                    <p>Stay informed and inspired. Subscribe to our newsletter!</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-white border-0 w-100 py-3 ps-4 pe-5" type="text"
                             placeholder="Your email">
