--- a/index.html
+++ b/index.html
@@ -564,11 +564,11 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">Our Founder</p>
-                <h1 class="display-5 mb-5">Our Founder</h1>
+                <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">Our Team</p>
+                <h1 class="display-5 mb-5">Exclusive Team</h1>
             </div>
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="row g-4 justify-content-center">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" style="margin-right: 20px;" data-wow-delay="0.1s">
                     <div class="team-item">
                         <img class="img-fluid rounded" src="img/founder.jpg" alt="">
                         <div class="team-text">
@@ -583,11 +583,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <!-- <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <br>
                     <h1>CA. Dhanashree Utturkar</h1>
                     <br>
-                    <!-- <h3 class="mb-4">25 Years Of Experience In Financial Support</h3> -->
                     <div class="paragraph-container">
                         <i class="fa fa-check text-primary me-3 icon"></i>
                         <p>Chartered Accountant with 10+ years of experience across various regions.</p>
@@ -614,13 +613,13 @@
                         <p>Collaborating with business process experts to deploy best industry practices that leads to significant improvements in
                             efficiency and cost savings.</p>
                     </div>
-                </div>
+                </div> -->
 
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" style="margin-left: 20px;" data-wow-delay="0.3s">
                     <div class="team-item">
-                        <img class="img-fluid rounded" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid rounded" src="img/team-1.jpg" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0">Jac Jacson</h4>
+                            <h4 class="mb-0">Maria</h4>
                             <div class="team-social d-flex">
                                 <a class="btn btn-square rounded-circle mx-1" href=""><i
                                         class="fab fa-facebook-f"></i></a>
@@ -631,7 +630,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
                         <img class="img-fluid rounded" src="img/team-3.jpg" alt="">
                         <div class="team-text">
